# archiviste-nocilia

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  docker-compose.override.yml.example  docker-compose.yml  release-notes.md
docs/: blockers.md  (+4 more)
eval/: .dockerignore  README.md  baseline.json  baseline_skip.py  clients.py  fetch_golden.py  gates.py  loader.py  metrics.py  oidc.py  persist.py  pyproject.toml  ragas_runner.py  run_writer.py  seed_test_corpus.py  stub_llm.py
eval/fixtures/: ci_smoke_qa.jsonl
eval/tests/: test_baseline_schema.py  test_baseline_skip.py  test_clients_auth.py  test_clients_retry.py  test_fetch_golden.py  test_gates.py  test_loader.py  test_metrics.py  test_oidc.py  test_persist.py  test_ragas_judge.py  test_runner_cli.py  test_runner_healthcheck.py  test_runner_oidc_cli.py  test_runner_persist_cli.py  test_seed_corpus.py  test_stub_llm.py
eval/tests/fixtures/: baseline_low.json  golden_invalid_id.jsonl  golden_invalid_mode.jsonl  golden_valid.jsonl  run_canon_only.json  run_mixed.json
gateway/: Cargo.toml
gateway/src/: config.rs  errors.rs  health_cache.rs  lib.rs  main.rs  state.rs
gateway/src/auth/: extractor.rs  fingerprint.rs  jwt.rs  mod.rs  password.rs  sessions.rs  throttle.rs  user_lookup.rs
gateway/src/auth_metadata/: id_token.rs  mod.rs  token.rs
gateway/src/gcs/: delete.rs  mod.rs  sign.rs  token.rs
gateway/src/handlers/: board.rs  chat.rs  chat_stream.rs  conversations.rs  costs.rs  dashboard.rs  health.rs  mod.rs  quality.rs  report_contradiction.rs  stats.rs  status.rs  tickets.rs  wake.rs  workers_proxy.rs
gateway/src/middleware/: mod.rs  timing.rs
gateway/src/routes/: auth.rs  me.rs  mod.rs
gateway/static/: board.html  dashboard.html  index.html  observability.html
gateway/static/assets/: app.js  board.css  board.js  dashboard.css  dashboard.js  observability.css  observability.js  styles.css
gateway/tests/: auth_extractor_test.rs  auth_login_test.rs  auth_logout_test.rs  auth_misc_test.rs  auth_properties.rs  auth_signup_test.rs  chat_log_test.rs  chat_property_test.rs  chat_test.rs  chat_timeout_override_test.rs  chat_timeout_test.rs  citations_frontend_test.rs  healthz_test.rs  idn001_cookie_identity_test.rs  me_test.rs  overhead_header_test.rs  prewarm_focus_frontend_test.rs  static_test.rs  test_board.rs  test_chat_stream.rs  test_chat_workers_auth.rs  test_conv_delete.rs  test_costs.rs  test_dashboard_backend.rs  test_dashboard_frontend.rs  test_del283_delete_conversation.rs  test_hist001_history.rs  test_observability.rs  test_observability_quality.rs  test_observability_status.rs  test_report_contradiction.rs  test_signed_url.rs  test_sql_pool.rs  test_wake.rs  wake_indicator_frontend_test.rs  wake_prewarm_frontend_test.rs  wakeup_indicator_frontend_test.rs
gateway/tests/common/: auth_mocks.rs  jwt_helpers.rs  mod.rs
scripts/: check-commit-msg.sh  check-ports.sh  check-setup.sh  measure-boot.sh  pyproject.toml  seed_author.sh
scripts/gdrive_export/: __init__.py  __main__.py  auth.py  docs_md_renderer.py  drive_client.py  frontmatter_merge.py  gsheet_renderer.py  gslide_renderer.py  images.py  md_rewrite.py  normalize.py  paths.py  rename.py  slugify.py  state.py  sync.py
scripts/load/: README.md
scripts/load/k6/: chat-round-trip.js  prompts.json
scripts/tests/: __init__.py  conftest.py  test_auth.py  test_docs_md_renderer.py  test_drive_client.py  test_frontmatter_merge.py  test_gsheet_renderer.py  test_gslide_renderer.py  test_images.py  test_import_firewall.py  test_main.py  test_md_rewrite.py  test_normalize.py  test_paths.py  test_rename.py  test_slugify.py  test_state.py  test_sync_integration.py
workers/: pyproject.toml
workers/src/archiviste_workers/: __init__.py  db.py  embedder.py  logging_config.py  main.py  settings.py
workers/src/archiviste_workers/auth_metadata/: __init__.py  token.py
workers/src/archiviste_workers/contradiction/: __init__.py  models.py  prompt.py  repository.py  router.py  service.py
workers/src/archiviste_workers/conversation/: __init__.py  gcs_storage.py  models.py  repository.py  router.py  token_counter.py
workers/src/archiviste_workers/generate/: __init__.py  _pipeline.py  injection_filter.py  memory.py  models.py  parser.py  pricing.py  prompt.py  router.py  stream_router.py
workers/src/archiviste_workers/ingest/: __init__.py  __main__.py  chunker.py  cli.py  download_corpus.py  frontmatter.py  normalize.py  pipeline.py  repository.py
workers/src/archiviste_workers/retrieve/: __init__.py  router.py  schemas.py  search.py
workers/src/archiviste_workers/routers/: health.py
workers/src/archiviste_workers/services/: acl.py  conversation_client.py  http_client.py  intent.py  llm.py  query_log.py  retrieve_client.py  ticket_service.py
workers/tests/: conftest.py  test_acl_filter.py  test_chunker.py  test_chunker_properties.py  test_contradiction.py  test_conversation_integration.py  test_conversation_settings.py  test_conversation_validation.py  test_docker_compose_profiles.py  test_download_corpus.py  test_embedder.py  test_embedder_fake.py  test_embedder_properties.py  test_firstturn_fix.py  test_frontmatter.py  test_generate_injection_filter.py  test_generate_parser.py  test_generate_pricing.py  test_generate_prompt.py  test_generate_router.py  test_generate_validation.py  test_health.py  test_ingest_cli.py  test_ingest_integration.py  test_intent_classifier.py  test_llm_wrapper.py  test_main_lifespan.py  test_mem001_conversation_messages.py  test_mem001_conversation_messages_integration.py  test_mem002_memory.py  test_mem002_memory_integration.py  test_mode2_off_topic.py  test_mode3_lore_gap.py  test_mode4_mystery.py  test_mode4_timing.py  test_normalize.py  test_retrieve_contract.py  test_retrieve_integration.py  test_retrieve_logging.py  test_retrieve_properties.py  (+6 more)
workers/tests/fixtures/lore/: bad_access_tier.md  empty_title.md  missing_frontmatter.md  missing_title.md  valid_simple.md  valid_unicode.md
(+431 files in other folders)
