[project]
name = "archiviste-eval"
version = "0.1.0"
description = "Archiviste Nocilia — RAG eval runner (Ragas + CI gates)"
requires-python = ">=3.12"

dependencies = [
    "google-auth>=2",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "pydantic>=2.9",
    "structlog>=24.4",
]

[project.optional-dependencies]
# live: runtime deps for live eval mode (API-only: Ragas + OpenAI judge + Mistral generate).
# Installed in the Docker image via --extra live --no-dev (no test/lint tools baked).
# Also listed in dev so the PR lint/test path (uv run --extra dev) stays unchanged.
live = [
    "ragas>=0.2",
    "datasets>=3.2",
    "langchain-openai>=0.2",
]
dev = [
    "pytest>=8.3",
    "pytest-httpserver>=1.1",
    "hypothesis>=6.122",
    "ruff>=0.8",
    "mypy>=1.13",
    "ragas>=0.2",
    "datasets>=3.2",
    "langchain-openai>=0.2",
    "pip-audit>=2.7",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring docker compose",
    "slow: slow tests skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "T20", "PT", "RET", "PL", "N"]
ignore = ["S101", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20", "PLR2004", "E501", "PLC0415", "PLW1510", "RUF005", "RUF059", "F401", "PT011"]
"seed_test_corpus.py" = ["T20"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["ragas", "ragas.*", "datasets", "datasets.*", "structlog", "structlog.*", "psycopg2", "psycopg2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.auth", "google.auth.*", "google.oauth2", "google.oauth2.*"]
ignore_missing_imports = true
