[package]
name = "archiviste-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.52", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit", "fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
config = "0.15"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }
sha2 = "0.10"
secrecy = { version = "0.10", features = ["serde"] }
axum-extra = { version = "0.12", features = ["cookie"] }
ring = "0.17"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
proptest = "1"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
mockito = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
pkcs8 = { version = "0.10", features = ["pem"] }
rsa = "0.9"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
clone_on_ref_ptr = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
cognitive_complexity = "warn"
module_name_repetitions = "allow"
