[project]
name = "gdrive-export"
version = "0.1.0"
description = "Archiviste Nocilia — Google Drive sync utilities (pure, no Drive API)"
requires-python = ">=3.12"
authors = [{ name = "Doudoune (Baptiste Herbecq)", email = "baptiste.herbecq@gmail.com" }]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gdrive_export"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "TID",
    "S",
    "T20",
    "PT",
    "RET",
    "PL",
    "N",
    "FBT",
]
ignore = [
    "S101",
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20", "PLR2004", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring git",
]

[tool.coverage.run]
source = ["gdrive_export"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
