[project]
name = "archiviste-workers"
version = "0.1.0"
description = "Archiviste Nocilia — RAG workers (FastAPI + LangChain)"
requires-python = ">=3.12"
authors = [{ name = "Doudoune (Baptiste Herbecq)", email = "baptiste.herbecq@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "pgvector>=0.3",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "sentence-transformers>=3.3",
    "google-cloud-storage>=2.18",
    "langfuse>=2.55",
    "structlog>=24.4",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
    "ruff>=0.8",
    "mypy>=1.13",
    "schemathesis>=3.39",
    "ragas>=0.2",
    "datasets>=3.2",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archiviste_workers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "TID",              # tidy imports
    "S",                # security (bandit)
    "ASYNC",            # async issues
    "T20",              # no print
    "PT",               # pytest style
    "RET",              # return clarity
    "PL",               # pylint subset (complexity)
    "N",                # PEP8 naming
]
ignore = [
    "S101",     # assert in tests is fine
    "PLR0913",  # too-many-args handled by review/clean-code
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "T20", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests requiring docker compose",
    "slow: slow tests skipped by default",
]

[tool.coverage.run]
source = ["src/archiviste_workers"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
